# OOPLabsNSU

./: .gitignore  CMakeLists.txt
lab0a/: CMakeLists.txt
lab0a/src/: main.cpp
lab0b/: CMakeLists.txt
lab0b/src/: main.cpp
lab1a/: CMakeLists.txt
lab1a/include/: bit_array.h  bit_array2.h
lab1a/src/: bit_array.cpp  bit_array2.cpp
lab1a/test/: bit_array_test.cpp  bit_array_test2.cpp
lab2a/: CMakeLists.txt
lab2a/include/: game.h  strategy.h
lab2a/include/strategies/: balance_strategy.h  cooperate_strategy.h  defect_strategy.h  kind_strategy.h  mirror_strategy.h  stat_strategy.h
lab2a/src/: game.cpp  main.cpp  strategy.cpp
lab2a/src/strategies/: balance_strategy.cpp  cooperate_strategy.cpp  defect_strategy.cpp  kind_strategy.cpp  mirror_strategy.cpp  stat_strategy.cpp
lab2a/test/: game_test.cpp
lab3/: CMakeLists.txt
lab3/include/: cfg_parser.h  converter.h  processor.h  wav_file.h
lab3/src/: cfg_parser.cpp  converter.cpp  main.cpp  processor.cpp  wav_file.cpp
lab4/: CMakeLists.txt
lab4/include/: CSVParser.hpp
lab4/src/: main.cpp
